# coordinate

./: .cirrus.yml  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  entrypoint.sh  generate_blockfilters.py  libbitcoinconsensus.pc  libtool  readme.md
.github/workflows/: ci.yml  dev-build-push-ecr.yml  dev-build-push-ghcr.yml
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
build-aux/: test-driver
build-aux/m4/: coordinate_qt.m4
build_msvc/: .gitignore  README.md  bitcoin.sln  msvc-autogen.py
build_msvc/bench_bitcoin/: bench_bitcoin.vcxproj.in
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/coordinate-cli/: coordinate-cli.vcxproj
build_msvc/coordinate-qt/: coordinate-qt.vcxproj
build_msvc/coordinate-tx/: coordinate-tx.vcxproj
build_msvc/coordinate-util/: coordinate-util.vcxproj
build_msvc/coordinate-wallet/: coordinate-wallet.vcxproj
build_msvc/coordinated/: coordinated.vcxproj
build_msvc/libcoordinate_qt/: libcoordinate_qt.vcxproj
build_msvc/test_bitcoin/: test_bitcoin.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
build_msvc/test_coordinate-qt/: test_coordinate-qt.vcxproj
ci/test/: 00_setup_env_i686_multiprocess.sh  03_test_script.sh
contrib/: README.md
contrib/devtools/: README.md  gen-bitcoin-conf.sh  gen-manpages.py  split-debug.sh  symbol-check.py  test_utxo_snapshots.sh  utxo_snapshot.sh
contrib/init/: README.md  coordinated.conf  coordinated.init  coordinated.openrc  coordinated.openrcconf  coordinated.service
contrib/linearize/: README.md  example-linearize.cfg
contrib/macdeploy/: detached-sig-create.sh  macdeployqtplus
contrib/message-capture/: message-capture-docs.md
contrib/qos/: README.md
contrib/signet/: README.md  getcoins.py  miner
contrib/testgen/: gen_key_io_test_vectors.py
contrib/tracing/: README.md  connectblock_benchmark.bt  log_p2p_traffic.bt  log_raw_p2p_msgs.py  log_utxocache_flush.py  log_utxos.bt  mempool_monitor.py  p2p_monitor.py
contrib/zmq/: zmq_sub.py
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assetcreation.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  cjdns.md  developer-notes.md  external-signer.md  files.md  fuzzing.md  i2p.md  init.md  managing-wallets.md  merge-mining-api.md  multisig-tutorial.md  p2tsh.md  productivity.md  psbt.md  reduce-memory.md  release-notes-19762.md  release-notes-empty-template.md  release-notes.md  release-process.md  tor.md  tracing.md  zmq.md
doc/design/: assumeutxo.md  libraries.md  multiprocess.md
doc/man/: Makefile  Makefile.am  Makefile.in  coordinate-cli.1  coordinate-qt.1  coordinate-tx.1  coordinate-util.1  coordinate-wallet.1  coordinated.1
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  (+77 more)
share/: setup.nsi  setup.nsi.in
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addresstype.cpp  addresstype.h  addrman.cpp  anduro_deposit.cpp  anduro_deposit.h  anduro_validator.cpp  anduro_validator.h  auxpow.cpp  auxpow.h  bitcoin-chainstate.cpp  bitcoin-cli  bitcoin-cli.cpp  blockencodings.h  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  coordinate-cli-res.rc  coordinate-cli.cpp  coordinate-tx  coordinate-tx-res.rc  coordinate-tx.cpp  coordinate-util  coordinate-util-res.rc  coordinate-util.cpp  coordinate-wallet  (+49 more)
src/libbitcoinpqc/: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.rs
src/libbitcoinpqc/.github/workflows/: ci.yml
src/libbitcoinpqc/benches/: README.md  REPORT.md  sig_benchmarks.rs
src/libbitcoinpqc/dilithium/ref/: config.h  randombytes_custom.c
src/libbitcoinpqc/examples/: basic.rs
src/libbitcoinpqc/fuzz/: Cargo.toml  README.md  output.txt  run_all_fuzzers.sh
src/libbitcoinpqc/fuzz/artifacts/sign_verify/: crash-256ac14220a2ca53e6006f2ed7f036b98864e08a
src/libbitcoinpqc/fuzz/fuzz_targets/: cross_algorithm_fuzz.rs  key_parsing_fuzz.rs  keypair_generation_fuzz.rs  sign_verify_fuzz.rs  signature_parsing_fuzz.rs
src/libbitcoinpqc/include/libbitcoinpqc/: bitcoinpqc.h  ml_dsa.h  slh_dsa.h
src/libbitcoinpqc/nodejs/: .gitignore  README.md  binding.gyp  jest.config.js  package-lock.json  package.json  tsconfig.json
src/libbitcoinpqc/nodejs/examples/: basic-usage.ts
src/libbitcoinpqc/nodejs/src/: index.ts  library.ts  types.ts
src/libbitcoinpqc/nodejs/src/__tests__/: bitcoinpqc.test.ts
src/libbitcoinpqc/nodejs/src/native/: bitcoinpqc_addon.cc  bitcoinpqc_wrapper.cc  bitcoinpqc_wrapper.h  mock_bitcoinpqc_addon.cc
src/libbitcoinpqc/nodejs/tests/: bitcoinpqc.test.ts
src/libbitcoinpqc/python/: MANIFEST.in  README.md  check_library.py  run_tests.sh  setup.py
src/libbitcoinpqc/python/bitcoinpqc/: __init__.py  bitcoinpqc.py
src/libbitcoinpqc/python/examples/: __init__.py  basic_usage.py
src/libbitcoinpqc/python/tests/: __init__.py  test_bitcoinpqc.py
src/libbitcoinpqc/sphincsplus/ref/: api.h  randombytes_custom.c
src/libbitcoinpqc/src/: bindings_include.rs  bitcoinpqc.c  lib.rs
src/libbitcoinpqc/src/ml_dsa/: keygen.c  sign.c  utils.c  verify.c
src/libbitcoinpqc/src/slh_dsa/: keygen.c  sign.c  slh_dsa.c  utils.c  verify.c
src/libbitcoinpqc/tests/: algorithm_tests.rs  serialization_tests.rs
src/qt/: intro.h  (+73 more)
test/: README.md  config.ini  config.ini.in  get_previous_releases.py
(+1199 files in other folders)
