dist_man1_MANS=

if BUILD_COORDINATED
  dist_man1_MANS+=coordinated.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_COORDINATE_CLI
  dist_man1_MANS+=coordinate-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=bitcoin-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=bitcoin-wallet.1
endif
endif
