dist_man1_MANS=

if build_coordinated
  dist_man1_MANS+=coordinated.1
endif

if ENABLE_QT
  dist_man1_MANS+=coordinate-qt.1
endif

if BUILD_COORDINATE_CLI
  dist_man1_MANS+=coordinate-cli.1
endif

if BUILD_COORDINATE_TX
  dist_man1_MANS+=coordinate-tx.1
endif

if BUILD_COORDINATE_UTIL
  dist_man1_MANS+=coordinate-util.1
endif

if ENABLE_WALLET
if BUILD_COORDINATE_WALLET
  dist_man1_MANS+=coordinate-wallet.1
endif
endif
